--- a/css/stilos.css
+++ b/css/stilos.css
@@ -1,6 +1,22 @@
 body
 {
-  background-color: red;
-  color: white;
-  text-align: center;
+  background-color: ;
+  color: #333;
+  text-align: left;
+  font-family: "Roboto";
+  font-size: 16px;
+}
+
+#container
+{
+  width: 70%;
+  padding: 1em;
+  text-align: left;
+  border: 1px solid #DDD;
+  margin: 0 auto;
+}
+
+#container h1
+{
+  font-size: 20px;
 }
