Estructura inicial de la cabecera

--- a/css/stilos.css
+++ b/css/stilos.css
@@ -3,7 +3,7 @@ body
   background-color: ;
   color: #333;
   text-align: left;
-  font-family: "Roboto";
+  font-family: "Nexa slab bold";
   font-size: 16px;
 }
 
