--- a/css/stilos.css
+++ b/css/stilos.css
@@ -3,7 +3,7 @@ body
   background-color: ;
   color: #333;
   text-align: left;
-  font-family: "Panton";
+  font-family: "Source Sans Pro";
   font-size: 16px;
   margin: 0;
   padding: 0;
