--- a/css/stilos.css
+++ b/css/stilos.css
@@ -1,7 +1,7 @@
 body
 {
   background-color: ;
-  color: blue;
+  color: GREEN;
   text-align: left;
   font-family: "Source Sans Pro";
   font-size: 16px;
